--- a/first/style.css
+++ b/first/style.css
@@ -3,21 +3,25 @@
     padding: 0;
     font-size: 62.5%;
     box-sizing: border-box;
+    overflow-x: hidden;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+a {
+    text-decoration: none;
 }
 .navbar {
     position: fixed;
     width: 100%;
     height: 110px;
-    background-color: rgb(238, 238, 238);
-    box-shadow: 0px 6px 40px 0px rgb(200, 200, 200);
+    background-color: #b6d0ee;
+    box-shadow: 0px 6px 40px 0px #386ba5;
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 .navItems {
     margin: 2%;
-    text-decoration: none;
     color: rgb(29, 30, 32);
     font-size: 25px;
     transition: color .4s;
@@ -43,14 +47,14 @@
 label {
     display: none;
     flex-direction: column;
-    width: 70px;
+    width: 50px;
     cursor: pointer;
 }
 label span {
     background: rgb(29, 30, 32);
     border-radius: 10px;
     height: 7px;
-    margin: 7px 0;
+    margin: 6px 0;
     transition: .4s cubic-bezier(0.68, -0.6, 0.32, 1.6);
 }
 span:nth-of-type(1) {
@@ -69,12 +73,12 @@ input[type="checkbox"] {
 }
 
 input[type="checkbox"]:checked~span {
-    background-color: #b90000;
+    background-color: #a30000;
 }
 
 input[type="checkbox"]:checked~span:nth-of-type(1) {
     transform-origin: bottom;
-    transform: rotatez(45deg) translate(8px, 0px);
+    transform: rotatez(45deg) translate(8px, 3px);
 }
 
 input[type="checkbox"]:checked~span:nth-of-type(2) {
@@ -85,19 +89,8 @@ input[type="checkbox"]:checked~span:nth-of-type(2) {
 input[type="checkbox"]:checked~span:nth-of-type(3) {
     transform-origin: bottom;
     width: 50%;
-    transform: translate(30px, -11px) rotatez(45deg);
+    transform: translate(21.5px, -12px) rotatez(45deg);
 
-}
-
-@media screen and (max-width: 700px) {
-    label {
-        display: flex;
-        position: absolute;
-        right: 5%;
-    }
-    .navItems {
-        display: none;
-    }
 }
 
 .sideMenu {
@@ -112,10 +105,95 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     flex-direction: column;
     transition: left .4s;
     z-index: 999 !important;
+    overflow: hidden;
 }
 .sideMenuItems {
-    text-decoration: none;
     color: rgb(24, 29, 37);
     font-size: 25px;
-    margin: 15% 0;
+    margin: 5% 0;
+}
+.sideMenuItems:hover {
+    border-bottom: 2px solid rgb(31, 63, 114);
+}
+.fab {
+    font-size: 15em;
+    color: rgb(29, 30, 32);
+    margin: 0 1.5%;
+}
+@media screen and (max-width: 900px) {
+    label {
+        display: flex;
+        position: absolute;
+        right: 5%;
+    }
+    .navItems {
+        display: none;
+    }
+    .navbar {
+        height: 100px;
+        justify-content: start;
+    }
+    .fab {
+        margin: 0 2%;
+    }
+}
+@media screen and (max-width: 450px) {
+    .sideMenuItems {
+        margin: 10% 0;
+    }
+    .navbar {
+        height: 80px;
+    }
+}
+.home {
+    background-image: url(media/background-image.jpg);
+    background-size: cover;
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    justify-items: center;
+    grid-template-columns: 1fr;
+    align-content: center;
+}
+#myPic {
+    box-shadow: 0px 0px 50px 5px #00244d;
+    user-select: none;
+    height: 30vmin;
+    width: 30vmin;
+    border-radius: 50%;
+    border: 4px solid #05111fdc;
+    margin-top: 5%;
+}
+h1 {
+    font-size: 7vmin;
+    margin: 0.5em;
+}
+h2 {
+    font-size: 4vmin;
+    margin: 0.5em;
+}
+#myProfession{
+    font-weight: 400;
+}
+.homeText {
+    text-align: center;
+    color: #1e242c;
+}
+.about {
+    width: 100vw;
+    height: 100vh;
+    background-color: #001936;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-left: 10vw;
+    padding-right: 10vw;
+}
+
+.aboutHeader, .aboutDescription {
+    color: #ebebeb;
+}
+p {
+    font-size: 3.5vmin;
 }
