--- a/first/style.css
+++ b/first/style.css
@@ -4,10 +4,30 @@
     font-size: 62.5%;
     box-sizing: border-box;
     overflow-x: hidden;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: Outfit, sans-serif;;
 }
 a {
     text-decoration: none;
+    overflow: hidden;
+}
+p {
+    font-size: 5vmin;
+}
+h1 {
+    font-size: 9vmin;
+    margin: 0.5em;
+}
+h2 {
+    font-size: 7vmin;
+    margin: 0.5em;
+}
+h3 {
+    font-size: 4vmin;
+    margin: 0.5em;
+}
+li {
+    font-size: 2vmin;
+    margin: 0.5em;
 }
 .navbar {
     position: fixed;
@@ -103,6 +123,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    flex-wrap: wrap;
     transition: left .4s;
     z-index: 999 !important;
     overflow: hidden;
@@ -111,14 +132,23 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     color: rgb(24, 29, 37);
     font-size: 25px;
     margin: 5% 0;
+    overflow: hidden;
 }
 .sideMenuItems:hover {
     border-bottom: 2px solid rgb(31, 63, 114);
 }
 .fab {
     font-size: 15em;
-    color: rgb(29, 30, 32);
+    color: #171515;
     margin: 0 1.5%;
+}
+.fa-youtube:hover {
+    color: #ff0000;
+}
+.fa-instagram:hover {
+    background-image: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 @media screen and (max-width: 900px) {
     label {
@@ -164,19 +194,16 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     border: 4px solid #05111fdc;
     margin-top: 5%;
 }
-h1 {
-    font-size: 7vmin;
-    margin: 0.5em;
-}
-h2 {
-    font-size: 4vmin;
-    margin: 0.5em;
-}
 #myProfession{
     font-weight: 400;
+    font-size: 5vmin;
 }
 .homeText {
     text-align: center;
+}
+.homeText,
+#skillsTitle,
+.skillCategories {
     color: #1e242c;
 }
 .about {
@@ -190,10 +217,27 @@ h2 {
     padding-left: 10vw;
     padding-right: 10vw;
 }
-
 .aboutHeader, .aboutDescription {
     color: #ebebeb;
 }
-p {
-    font-size: 3.5vmin;
+.skills {
+    height: 100vh;
+    background-color: #d2d3d6;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+#skillsTitle {
+    padding-top: 20vh;
+}
+.skillCards {
+    width: 25%;
+    height: 35%;
+    background-color: #ffffff;
+    border: 3px solid #1e242c;
+    border-radius: 50px;
+    overflow: hidden;
+}
+.skillsList {
+    padding-left: 5%;
 }
