--- a/first/style.css
+++ b/first/style.css
@@ -26,7 +26,7 @@ h3 {
     margin: 0.5em;
 }
 li {
-    font-size: 2vmin;
+    font-size: 3vmin;
     margin: 0.5em;
 }
 .navbar {
@@ -39,6 +39,8 @@ li {
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 .navItems {
     margin: 2%;
@@ -125,13 +127,13 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     flex-direction: column;
     flex-wrap: wrap;
     transition: left .4s;
-    z-index: 999 !important;
+    z-index: 10;
     overflow: hidden;
 }
 .sideMenuItems {
     color: rgb(24, 29, 37);
-    font-size: 25px;
-    margin: 5% 0;
+    font-size: 5vh;
+    margin: 25px 0;
     overflow: hidden;
 }
 .sideMenuItems:hover {
@@ -149,6 +151,33 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     background-image: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+.skills {
+    height: 100vh;
+    background-color: #d2d3d6;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.skillsTitle {
+    padding-top: 20vh;
+}
+.skillCards {
+    width: 50vmin;
+    height: 55vmin;
+    background-color: #ffffff;
+    border: 3px solid #1e242c;
+    border-radius: 50px;
+    overflow: hidden;
+}
+.skillsList {
+    padding-left: 5%;
+}
+.skillsImage {
+    margin-left: 5%;
+    width: 4vmin;
+    height: 4vmin;
 }
 @media screen and (max-width: 900px) {
     label {
@@ -168,11 +197,19 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     }
 }
 @media screen and (max-width: 450px) {
-    .sideMenuItems {
-        margin: 10% 0;
-    }
     .navbar {
         height: 80px;
+    }
+    h3 {
+        font-size: 5vmin;
+    }
+    li {
+        font-size: 3.5vmin;
+    }
+}
+@media screen and (max-height: 350px) {
+    .sideMenuItems {
+        font-size: 30px;
     }
 }
 .home {
@@ -185,7 +222,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     grid-template-columns: 1fr;
     align-content: center;
 }
-#myPic {
+.myPic {
     box-shadow: 0px 0px 50px 5px #00244d;
     user-select: none;
     height: 30vmin;
@@ -194,7 +231,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     border: 4px solid #05111fdc;
     margin-top: 5%;
 }
-#myProfession{
+.myProfession{
     font-weight: 400;
     font-size: 5vmin;
 }
@@ -202,7 +239,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     text-align: center;
 }
 .homeText,
-#skillsTitle,
+.skillsTitle,
 .skillCategories {
     color: #1e242c;
 }
@@ -219,25 +256,4 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
 }
 .aboutHeader, .aboutDescription {
     color: #ebebeb;
-}
-.skills {
-    height: 100vh;
-    background-color: #d2d3d6;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-#skillsTitle {
-    padding-top: 20vh;
-}
-.skillCards {
-    width: 25%;
-    height: 35%;
-    background-color: #ffffff;
-    border: 3px solid #1e242c;
-    border-radius: 50px;
-    overflow: hidden;
-}
-.skillsList {
-    padding-left: 5%;
 }
