--- a/style.css
+++ b/style.css
@@ -178,17 +178,14 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     height: 4vmin;
 }
 .projectPictures {
-    width: 555px;
-    height: 347px;
     border: 2px solid rgb(29, 30, 32);
-    border-radius: 15px;
 }
 .container {
     display: none;
     overflow: auto;
     flex: none;
     margin-bottom: 20%;
-    scroll-snap-type: x mandatory;
+    scroll-snap-type: x proximity;
 }
 .container.x {
     width: 555px;
@@ -212,8 +209,6 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
 }
 .projectTitlesRes {
     height: 37px;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
     background-color: #2581e948;
     line-height: 37px;
 }
@@ -245,10 +240,6 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
         width: 280.275px;
         height: 184.325px;
     }
-    .projectPictures {
-        width: 277.5px;
-        height: 182.5px;
-    }
     .container.x {
         width: 277.5px;
         height: 182.5px;
@@ -266,6 +257,20 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
         display: block;
     }
 }
+@media screen and (min-width: 900px) {
+    .x.container > div {
+        width: 420.4125px;
+        height: 276.4875px;
+    }
+    .container.x {
+        width: 416.25px;
+        height: 273.75px;
+    }
+    .projectPictures {
+        width: 832.5px;
+        height: 547.5px;
+    }
+}
 @media screen and (max-width: 450px) {
     .navbar {
         height: 80px;
@@ -281,7 +286,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
         height: 182.5px;
     }
 }
-@media screen and (min-width: 450px) {
+@media screen and (min-width: 450px) and (max-width: 900px) {
     .x.container > div {
         width: 420.4125px;
         height: 276.4875px;
@@ -385,7 +390,8 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
 }
 .projectPictures,
 .linkSection {
-    border-radius: 15px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
 .linkSection {
     background-color: #2580e96c;
@@ -416,8 +422,8 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     color: rgb(255, 255, 255);
     padding: 10px;
     top:50%;
-    margin-top: -40px;
-    font-size: 30px;
+    margin-top: -55px;
+    font-size: 50px;
     cursor: pointer;
 }
 .prev:active, .next:active {
@@ -454,3 +460,11 @@ span::selection,
 .slideShow > div::selection {
     background-color: rgba(0, 0, 0, 0);
 }
+.snowflake {
+    color: #fff;
+    font-size: 2rem;
+    text-shadow: 0 0 1px #000;
+    pointer-events: none;
+}
+  
+@-webkit-keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@-webkit-keyframes snowflakes-shake{0%{-webkit-transform:translateX(0px);transform:translateX(0px)}50%{-webkit-transform:translateX(80px);transform:translateX(80px)}100%{-webkit-transform:translateX(0px);transform:translateX(0px)}}@keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@keyframes snowflakes-shake{0%{transform:translateX(0px)}50%{transform:translateX(80px)}100%{transform:translateX(0px)}}.snowflake{position:fixed;top:-10%;z-index:9999;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;cursor:default;-webkit-animation-name:snowflakes-fall,snowflakes-shake;-webkit-animation-duration:10s,3s;-webkit-animation-timing-function:linear,ease-in-out;-webkit-animation-iteration-count:infinite,infinite;-webkit-animation-play-state:running,running;animation-name:snowflakes-fall,snowflakes-shake;animation-duration:10s,3s;animation-timing-function:linear,ease-in-out;animation-iteration-count:infinite,infinite;animation-play-state:running,running}.snowflake:nth-of-type(0){left:1%;-webkit-animation-delay:0s,0s;animation-delay:0s,0s}.snowflake:nth-of-type(1){left:10%;-webkit-animation-delay:1s,1s;animation-delay:1s,1s}.snowflake:nth-of-type(2){left:20%;-webkit-animation-delay:6s,.5s;animation-delay:6s,.5s}.snowflake:nth-of-type(3){left:30%;-webkit-animation-delay:4s,2s;animation-delay:4s,2s}.snowflake:nth-of-type(4){left:40%;-webkit-animation-delay:2s,2s;animation-delay:2s,2s}.snowflake:nth-of-type(5){left:50%;-webkit-animation-delay:8s,3s;animation-delay:8s,3s}.snowflake:nth-of-type(6){left:60%;-webkit-animation-delay:6s,2s;animation-delay:6s,2s}.snowflake:nth-of-type(7){left:70%;-webkit-animation-delay:2.5s,1s;animation-delay:2.5s,1s}.snowflake:nth-of-type(8){left:80%;-webkit-animation-delay:1s,0s;animation-delay:1s,0s}.snowflake:nth-of-type(9){left:90%;-webkit-animation-delay:3s,1.5s;animation-delay:3s,1.5s}
