--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+html {
+    scroll-behavior: smooth;
+}
 * {
     margin: 0;
     padding: 0;
@@ -150,7 +153,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     -webkit-text-fill-color: transparent;
 }
 
-.skills {
+#skills {
     background-image: linear-gradient(90deg, #696969, #3d72b4);
     height: 100vh;
     background-color: #d2d3d6;
@@ -312,7 +315,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
         font-size: 30px;
     }
 }
-.home {
+#home {
     background-image: url(media/large-triangles.svg);
     background-size: cover;
     width: 100vw;
@@ -343,7 +346,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
 .skillCategories {
     color: #1e242c;
 }
-.about {
+#about {
     width: 100vw;
     height: 100vh;
     background-color: #001936;
@@ -360,11 +363,12 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
 .aboutDescription {
     font-size: 5vmin;
 }
-.projects {
+#projects {
     background-image: linear-gradient(90deg, #696969, #3d72b4);
     display: grid;
     justify-content: center;
     justify-items: center;
+    padding: 10vh;
 }
 .projectsTitle {
     color: rgb(29, 30, 32);
@@ -409,7 +413,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
 }
 .linkSection:hover{
     min-height: 100%;
-    font-size: 5rem;
+    font-size: 7rem;
 }
 .projectTitles {
     margin-bottom: 0;
