--- a/style.css
+++ b/style.css
@@ -143,9 +143,11 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     font-size: 15em;
     color: #171515;
     margin: 0 1.5%;
+    padding-top: 2px;
+    padding-right: 2px;
 }
-.fa-youtube:hover {
-    color: #ff0000;
+.fa-telegram:hover {
+    color: #229ED9;
 }
 .fa-instagram:hover {
     background-image: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
