--- a/weather-app/style.css
+++ b/weather-app/style.css
@@ -1,8 +1,28 @@
 body {
     overflow-x: hidden;
 }
+p {
+    margin: 0;
+    font-size: 3vmin;
+}
+h1 {
+    font-size: 6vmin;
+}
+h3 {
+    font-size: 4vmin;
+}
+ul {
+    font-size: 2.5vmin;
+}
 .container {
-    width: 150vw;
+    display: flex;
+    margin-bottom: 5%;
+}
+.threeDCard {
+    background-color: rgb(224, 224, 224);
+    padding: 2%;
+    border-radius: 15px;
+    box-shadow: 0px 0px 30px rgb(190, 190, 190);
 }
 .weather-wrapper {
     height: 13rem;
@@ -25,10 +45,6 @@ body {
 .t5 {
     background-color: rgb(255, 239, 92);
 }
-p {
-    margin: 0;
-    font-size: 3vmin;
-}
 .btn {
     width: 42px;
     height: 38px;
@@ -40,8 +56,12 @@ p {
     justify-content: space-around;
     align-items: center;
 }
-@media only screen and (max-width: 1200px) and (min-width: 576px) {
-    .container {
-        max-width: 1200px;
-    }
+select {
+    margin-bottom: 10px;
+}
+option {
+    font-family: cursive;
+}
+option:nth-child(2n) {
+    background-color: rgb(240, 248, 255);
 }
