--- a/style.css
+++ b/style.css
@@ -183,7 +183,11 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     height: 4vmin;
 }
 .projectPictures {
-    border: 2px solid rgb(29, 30, 32);
+    transition: transform 0.3s, filter 0.3s;
+}
+.projectPictures:hover {
+    transform: scale(1.3);
+    filter: brightness(60%) blur(2px);
 }
 .container {
     display: none;
@@ -273,7 +277,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     }
     .projectPictures {
         width: 832.5px;
-        height: 547.5px;
+        height: 549.5px;
     }
 }
 @media screen and (max-width: 450px) {
@@ -286,7 +290,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     li {
         font-size: 3.5vmin;
     }
-    .projectPictures {
+    .projectPicturesRes {
         width: 277.5px;
         height: 182.5px;
     }
@@ -300,7 +304,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
         width: 416.25px;
         height: 273.75px;
     }
-    .projectPictures {
+    .projectPicturesRes {
         width: 416.25px;
         height: 273.75px;
     }
@@ -342,6 +346,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
 }
 .homeText {
     text-align: center;
+    overflow: hidden;
 }
 .homeText,
 .skillsTitle,
@@ -386,6 +391,9 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     display: none;
     position: relative;
     animation: fade 0.5s;
+    overflow: hidden;
+    border: 2px solid rgb(29, 30, 32);
+    border-bottom: none;
 }
 @keyframes fade {
     0%  { opacity: 0; }
@@ -394,7 +402,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
 .slide.active {
     display: block;
 }
-.projectPictures,
+.slide,
 .linkSection {
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
@@ -402,7 +410,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
 .linkSection {
     background-color: #2580e96c;
     position: absolute;
-    bottom: 2px;
+    bottom: 0;
     width: 100%;
     min-height: 100px;
     transition: min-height 0.4s, font-size 0.4s;
@@ -448,15 +456,21 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     display: flex;
     justify-content: center;
     margin-top: 7px;
+    overflow: hidden;
+    height: 30px;
 }
 .points span{
     width: 15px;
     height: 15px;
-    margin: 0 2px;
+    margin: 5px 3px;
     display: inline-block;
     background-color: rgb(238, 238, 238);
     border-radius: 50%;
     cursor: pointer;
+    transition: transform 0.3s;
+}
+.points span:hover{
+    transform: scale(1.3)
 }
 .points span.active {
     background-color: rgb(151, 151, 151);
