--- a/trigonometric-functions/style.css
+++ b/trigonometric-functions/style.css
@@ -74,20 +74,91 @@ p {
     border-radius: 5px;
     z-index: 10;
 }
-h1, h2 {
+.resultItems {
     background: -webkit-linear-gradient(45deg, #09009f, #00ff95 80%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    line-height: 12vh;
-    font-size: 6vmin;
+    line-height: 10vh;
+    font-size: 5.5vmin;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
-canvas {
-    color: rgb(255, 255, 255);
+h1 {
+    font-size: 5vmin;
+    color: rgb(221, 221, 221);
+}
+.informationIcon {
+    width: 100%;
+    height: 100%;
+    background-image: url(../media/info.svg);
+    background-size: cover;
+}
+.infoIconSection {
+    width: 35px;
+    height: 35px;
+    background-color: #818181b9;
+    position: absolute;
+    right: 0;
+    top: 65%;
+    margin-top: 5px;
+    margin-right: 5px;
+    border-radius: 8px;
+    transition: border-radius 0.2s;
+    cursor: pointer;
+}
+.infoIconSection:active {
+    border-radius: 15px;
+}
+.close {
+    background-color: transparent;
+    width: 2.5rem;
+    height: 2.5rem;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    border-radius: 5px;
+}
+.close:hover {
+    background-color: rgb(107, 107, 107);
 }
 @media only screen and (max-height:555px){
     .result {
         width: 35vw;
-        height: 90vh;
+        height: 85vh;
+    }
+    .infoIconSection {
+        top: 85%;
+    }
+    .close {
+        width: 2rem;
+        height: 2rem;
+    }
+}
+.information {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    background-color: #232225;
+    border-radius: 20px;
+    padding: 30px;
+    margin: 0 20px;
+    animation: backInUp 0.7s;
+}
+.layout {
+    width: 100%;
+    height: 100%;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    background-color: #00000054;
+}
+svg {
+    fill: #ffffff;
+}
+@media only screen and (max-width: 670px){
+    .close {
+        width: 2rem;
+        height: 2rem;
     }
 }
