--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
 .fa-instagram:hover {
     background-image: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
@@ -459,7 +460,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     overflow: hidden;
     height: 30px;
 }
-.points span{
+.points span {
     width: 15px;
     height: 15px;
     margin: 5px 3px;
@@ -469,7 +470,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     cursor: pointer;
     transition: transform 0.3s;
 }
-.points span:hover{
+.points span:hover:not(.active) {
     transform: scale(1.3)
 }
 .points span.active {
@@ -501,4 +502,60 @@ span::selection,
     height: 8px;
     background: rgb(61, 54, 182);
     width: 0%;
+}
+#loader1 {
+    width: 6vmax;
+    height: 6vmax;
+    position: fixed;
+    border-radius: 50%;
+    border-top: 4px solid rgb(180, 180, 255);
+    animation: loading 0.8s linear infinite;
+}
+#loader2 {
+    width: 4vmax;
+    height: 4vmax;
+    position: fixed;
+    border-radius: 50%;
+    border-top: 4px solid rgb(180, 180, 255);
+    animation: loadingReverse 0.8s linear infinite;
+}
+#loader3 {
+    width: 2vmax;
+    height: 2vmax;
+    position: fixed;
+    border-radius: 50%;
+    border-top: 3px solid rgb(180, 180, 255);
+    animation: loading 0.8s linear infinite;
+}
+#loading {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(10, 10, 10, 0.65);
+    z-index: 99;
+}
+@keyframes loading {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+@keyframes loadingReverse {
+    100% {
+        transform: rotate(0deg);
+    }
+    0% {
+        transform: rotate(360deg);
+    }
+}
+.disableScrolling {
+    overflow-y: hidden;
+    position: fixed;
 }
