--- a/trigonometric-functions/style.css
+++ b/trigonometric-functions/style.css
@@ -76,6 +76,7 @@ p {
 }
 .resultItems {
     background: -webkit-linear-gradient(45deg, #09009f, #00ff95 80%);
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     line-height: 10vh;
