--- a/style.css
+++ b/style.css
@@ -25,9 +25,19 @@ h3 {
     font-size: 4vmin;
     margin: 0.5em;
 }
+ul {
+    list-style: none;
+}
 li {
     font-size: 3vmin;
     margin: 0.5em;
+}
+footer {
+    background-color: rgb(0, 0, 0);
+    width: 100vw;
+    height: auto;
+    color: #fff;
+    padding: 64px 0;
 }
 .navbar {
     position: fixed;
@@ -139,7 +149,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
 .sideMenuItems:hover {
     border-bottom: 2px solid rgb(31, 63, 114);
 }
-.fab {
+.navbarIcon {
     font-size: 15em;
     color: #171515;
     margin: 0 1.5%;
@@ -154,6 +164,9 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+.fa-github:hover {
+    color: #542673;
 }
 
 #skills {
@@ -243,7 +256,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
         height: 100px;
         justify-content: start;
     }
-    .fab {
+    .navbarIcon {
         margin: 0 2%;
     }
     .x.container > div {
@@ -382,6 +395,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     justify-content: center;
     justify-items: center;
     padding: 10vh;
+    padding-bottom: 0;
 }
 .projectsTitle {
     color: rgb(29, 30, 32);
@@ -486,15 +500,61 @@ span::selection,
 .slideShow > div::selection {
     background-color: rgba(0, 0, 0, 0);
 }
-.snowflake {
+.flake {
     color: #fff;
     font-size: 2vmin;
     text-shadow: 0 0 1px #000;
     pointer-events: none;
 }
-  
-@-webkit-keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@-webkit-keyframes snowflakes-shake{0%{-webkit-transform:translateX(0px);transform:translateX(0px)}50%{-webkit-transform:translateX(80px);transform:translateX(80px)}100%{-webkit-transform:translateX(0px);transform:translateX(0px)}}@keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@keyframes snowflakes-shake{0%{transform:translateX(0px)}50%{transform:translateX(80px)}100%{transform:translateX(0px)}}.snowflake{position:fixed;top:-10%;z-index:9999;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;cursor:default;-webkit-animation-name:snowflakes-fall,snowflakes-shake;-webkit-animation-duration:10s,3s;-webkit-animation-timing-function:linear,ease-in-out;-webkit-animation-iteration-count:infinite,infinite;-webkit-animation-play-state:running,running;animation-name:snowflakes-fall,snowflakes-shake;animation-duration:10s,3s;animation-timing-function:linear,ease-in-out;animation-iteration-count:infinite,infinite;animation-play-state:running,running}.snowflake:nth-of-type(0){left:1%;-webkit-animation-delay:0s,0s;animation-delay:0s,0s}.snowflake:nth-of-type(1){left:10%;-webkit-animation-delay:1s,1s;animation-delay:1s,1s}.snowflake:nth-of-type(2){left:20%;-webkit-animation-delay:6s,.5s;animation-delay:6s,.5s}.snowflake:nth-of-type(3){left:30%;-webkit-animation-delay:4s,2s;animation-delay:4s,2s}.snowflake:nth-of-type(4){left:40%;-webkit-animation-delay:2s,2s;animation-delay:2s,2s}.snowflake:nth-of-type(5){left:50%;-webkit-animation-delay:8s,3s;animation-delay:8s,3s}.snowflake:nth-of-type(6){left:60%;-webkit-animation-delay:6s,2s;animation-delay:6s,2s}.snowflake:nth-of-type(7){left:70%;-webkit-animation-delay:2.5s,1s;animation-delay:2.5s,1s}.snowflake:nth-of-type(8){left:80%;-webkit-animation-delay:1s,0s;animation-delay:1s,0s}.snowflake:nth-of-type(9){left:90%;-webkit-animation-delay:3s,1.5s;animation-delay:3s,1.5s}
-
+.footerSection {
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 60px;
+    margin: 0 30px;
+}
+.footerSection h5,
+.footerCopyright h5 {
+    font-weight: normal;
+}
+.footerSection ul {
+    display: grid;
+    grid-template-columns: auto 1fr;
+}
+.footerSection a:not(.footerIcon) {
+    color: #999;
+    font-size: 15px;
+}
+.footerSocial a {
+    color: #7f7f7f;
+}
+.footerIcon {
+    font-size: 20px;
+}
+.footerLanguages{
+    display: inline-block;
+    margin-left: 0;
+}
+.footerLanguages a:hover{
+    text-decoration: underline;
+}
+.footerLine {
+    border: none;
+    border-top: 1px solid #666;
+    width: 70vw;
+    margin: 40px auto;
+}
+.footerLastWord {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 10px;
+}
+.footerLastWord h5 {
+    font-size: 15px;
+    font-weight: normal;
+    flex-basis: 200px;
+}
+@-webkit-keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@-webkit-keyframes snowflakes-shake{0%{-webkit-transform:translateX(0px);transform:translateX(0px)}50%{-webkit-transform:translateX(80px);transform:translateX(80px)}100%{-webkit-transform:translateX(0px);transform:translateX(0px)}}@keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@keyframes snowflakes-shake{0%{transform:translateX(0px)}50%{transform:translateX(80px)}100%{transform:translateX(0px)}}.flake{position:fixed;top:-10%;z-index:9999;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;cursor:default;-webkit-animation-name:snowflakes-fall,snowflakes-shake;-webkit-animation-duration:10s,3s;-webkit-animation-timing-function:linear,ease-in-out;-webkit-animation-iteration-count:infinite,infinite;-webkit-animation-play-state:running,running;animation-name:snowflakes-fall,snowflakes-shake;animation-duration:10s,3s;animation-timing-function:linear,ease-in-out;animation-iteration-count:infinite,infinite;animation-play-state:running,running}.flake:nth-of-type(0){left:1%;-webkit-animation-delay:0s,0s;animation-delay:0s,0s}.flake:nth-of-type(1){left:10%;-webkit-animation-delay:1s,1s;animation-delay:1s,1s}.flake:nth-of-type(2){left:20%;-webkit-animation-delay:6s,.5s;animation-delay:6s,.5s}.flake:nth-of-type(3){left:30%;-webkit-animation-delay:4s,2s;animation-delay:4s,2s}.flake:nth-of-type(4){left:40%;-webkit-animation-delay:2s,2s;animation-delay:2s,2s}.flake:nth-of-type(5){left:50%;-webkit-animation-delay:8s,3s;animation-delay:8s,3s}.flake:nth-of-type(6){left:60%;-webkit-animation-delay:6s,2s;animation-delay:6s,2s}.flake:nth-of-type(7){left:70%;-webkit-animation-delay:2.5s,1s;animation-delay:2.5s,1s}.flake:nth-of-type(8){left:80%;-webkit-animation-delay:1s,0s;animation-delay:1s,0s}.flake:nth-of-type(9){left:90%;-webkit-animation-delay:3s,1.5s;animation-delay:3s,1.5s}
 .progress-container {
     position: fixed;
     z-index: 11;
