--- a/style.css
+++ b/style.css
@@ -313,6 +313,12 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
         width: 277.5px;
         height: 182.5px;
     }
+    .skillsList li {
+        margin: 0.3em;
+    }
+    .skillCards {
+        border-radius: 20px;
+    }
 }
 @media screen and (min-width: 450px) and (max-width: 900px) {
     .x.container > div {
